ci/hms/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: backend
  namespace: hms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: localhost:5000/hms:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 4100
              name: backend
          command:
            - "/bin/sh"
            - "-c"
          args:
            - npm run backend:start:prod
          volumeMounts:
            - name: pvc-dist
              mountPath: /export/dist/
              readOnly: true
            - name: pvc-db
              mountPath: /export/db/
            - name: runtime-config
              mountPath: /export/
      volumes:
        - name: pvc-dist
          persistentVolumeClaim:
            claimName: pvc-dist
        - name: pvc-db
          persistentVolumeClaim:
            claimName: pvc-db
        - name: runtime-config
          configMap:
            name: runtime-config
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: frontend
  namespace: hms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: localhost:5000/hms:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 4000
              name: frontend
          command:
            - "/bin/sh"
            - "-c"
          args:
            - npm run frontend:serve:ssr
          volumeMounts:
            - name: pvc-dist
              mountPath: /export/dist/
              readOnly: true
            - name: runtime-config
              mountPath: /export/
      volumes:
        - name: pvc-dist
          persistentVolumeClaim:
            claimName: pvc-dist
        - name: runtime-config
          configMap:
            name: runtime-config
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: api
  namespace: hms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: localhost:5000/hms:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 4110
              name: api
          command:
            - "/bin/sh"
            - "-c"
          args:
            - cd /export/dist/ && ./api
          volumeMounts:
            - name: pvc-dist
              mountPath: /export/dist/
              readOnly: true
            - name: pvc-db
              mountPath: /export/db/
            - name: runtime-config
              mountPath: /export/
      volumes:
        - name: pvc-dist
          persistentVolumeClaim:
            claimName: pvc-dist
        - name: pvc-db
          persistentVolumeClaim:
            claimName: pvc-db
        - name: runtime-config
          configMap:
            name: runtime-config
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: file
  namespace: hms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: file
  template:
    metadata:
      labels:
        app: file
    spec:
      containers:
        - name: file
          image: localhost:5000/hms:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 4150
              name: file
          command:
            - "/bin/sh"
            - "-c"
          args:
            - cd /export/dist/ && ./file
          volumeMounts:
            - name: pvc-dist
              mountPath: /export/dist/
              readOnly: true
            - name: pvc-db
              mountPath: /export/db/
            - name: runtime-config
              mountPath: /export/
      volumes:
        - name: pvc-dist
          persistentVolumeClaim:
            claimName: pvc-dist
        - name: pvc-db
          persistentVolumeClaim:
            claimName: pvc-db
        - name: runtime-config
          configMap:
            name: runtime-config
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: downloader
  namespace: hms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: downloader
  template:
    metadata:
      labels:
        app: downloader
    spec:
      containers:
        - name: downloader
          image: localhost:5000/hms:latest
          imagePullPolicy: Never
          command:
            - "/bin/sh"
            - "-c"
          args:
            - cd /export/dist/ && ./downloader
          volumeMounts:
            - name: pvc-dist
              mountPath: /export/dist/
              readOnly: true
            - name: pvc-db
              mountPath: /export/db/
            - name: runtime-config
              mountPath: /export/
      volumes:
        - name: pvc-dist
          persistentVolumeClaim:
            claimName: pvc-dist
        - name: pvc-db
          persistentVolumeClaim:
            claimName: pvc-db
        - name: runtime-config
          configMap:
            name: runtime-config
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: encoder
  namespace: hms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: encoder
  template:
    metadata:
      labels:
        app: encoder
    spec:
      containers:
        - name: encoder
          image: localhost:5000/hms:latest
          imagePullPolicy: Never
          command:
            - "/bin/sh"
            - "-c"
          args:
            - cd /export/dist/ && ./encoder
          volumeMounts:
            - name: pvc-dist
              mountPath: /export/dist/
              readOnly: true
            - name: pvc-db
              mountPath: /export/db/
            - name: runtime-config
              mountPath: /export/
      volumes:
        - name: pvc-dist
          persistentVolumeClaim:
            claimName: pvc-dist
        - name: pvc-db
          persistentVolumeClaim:
            claimName: pvc-db
        - name: runtime-config
          configMap:
            name: runtime-config
