ci/hms/service.yml
kind: Service
apiVersion: v1
metadata:
  name: backend
  namespace: hms
  labels:
    app: backend
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
  - name: backend
    protocol: TCP
    port: 80
    targetPort: 4100
---
kind: Service
apiVersion: v1
metadata:
  name: frontend
  namespace: hms
  labels:
    app: frontend
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
  - name: frontend
    protocol: TCP
    port: 80
    targetPort: 4200
---
kind: Service
apiVersion: v1
metadata:
  name: api
  namespace: hms
  labels:
    app: api
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
  - name: api
    protocol: TCP
    port: 80
    targetPort: 4110
---
kind: Service
apiVersion: v1
metadata:
  name: file
  namespace: hms
  labels:
    app: file
spec:
  type: ClusterIP
  selector:
    app: file
  ports:
  - name: file
    protocol: TCP
    port: 80
    targetPort: 4150
